2009-06-28  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-layout.lisp (set-no-layout-remember-size): New layout:
	Maximize windows in there frame - Leave frames to there	actual
	size.

	* src/bindings-second-mode.lisp (set-default-second-keys): Bind
	"o" on set-open-in-new-frame-in-parent-frame-nw-hook.

2009-06-27  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/keyb_fr.lisp: New file to handle an azerty keyboard.

2009-06-24  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/mpd.lisp: Use a standard menu.

	* src/clfswm-info.lisp: Use a standard menu for the help-menu.

2009-06-22  Philippe Brochard  <pbrochard@common-lisp.net>

	* contrib/mpd.lisp: New file to handle the Music Player Daemon (MPD)

2009-06-19  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-autodoc.lisp (produce-doc, produce-doc-html): Minor
	number key cleanup.

2009-06-18  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/config.lisp (get-fullscreen-size):  One pixel adjustment
 	(again).

	* src/clfswm-placement.lisp (*-child-placement): One pixel
	adjustment (again).

2009-06-16  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-circulate-mode.lisp (draw-circulate-mode-window):
	Ensure that all characters are printable.

	* src/config.lisp (get-fullscreen-size): Adjust default fullscreen
	sizes.

	* src/clfswm-placement.lisp (*-child-placement): Adjust
	coordinates to one pixel in the current child.

2009-06-04  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/clfswm-query.lisp (query-enter-function): Assign font before
	width and height calculation.

2009-06-03  Philippe Brochard  <pbrochard@common-lisp.net>

	* src/xlib-util.lisp (banish-pointer): Use with-placement macro to
	bannish the pointer in an arbitrary place.

	* src/clfswm-info.lisp (info-mode): Use with-placement macro to
	place the info window in an arbitrary place.

	* src/clfswm-query.lisp (query-enter-function): Use with-placement