@@ -7,8 +7,6 @@ URGENT PROBLEMS
 ===============
 Should handle these soon.
 
-- Frame layout menu: No layout but frames 'learn' there position/size.
-
 - New: Put CD player / xmms modules in contrib/ ...
 
 - Mouse support in menu
