@@ -86,18 +86,19 @@
   (info-on-shell "Current MPD playlist:" "mpc playlist")
   (mpd-menu))
 
-(add-sub-menu 'help-menu "F2" 'mpd-menu "Music Player Daemon (MPD) menu")
+(unless (find-menu 'mpd-menu)
+  (add-sub-menu 'help-menu "F2" 'mpd-menu "Music Player Daemon (MPD) menu")
 
-(add-menu-key 'mpd-menu "i" 'show-mpd-info)
-(add-menu-key 'mpd-menu "p" 'mpd-previous)
-(add-menu-key 'mpd-menu "n" 'mpd-next)
-(add-menu-key 'mpd-menu "t" 'mpd-toggle)
-(add-menu-key 'mpd-menu "y" 'mpd-play)
-(add-menu-key 'mpd-menu "k" 'mpd-stop)
-(add-menu-key 'mpd-menu "x" 'mpd-seek-+5%)
-(add-menu-key 'mpd-menu "w" 'mpd-seek--5%)
-(add-menu-key 'mpd-menu "l" 'show-mpd-playlist)
-(add-menu-key 'mpd-menu "s" 'start-sonata)
+  (add-menu-key 'mpd-menu "i" 'show-mpd-info)
+  (add-menu-key 'mpd-menu "p" 'mpd-previous)
+  (add-menu-key 'mpd-menu "n" 'mpd-next)
+  (add-menu-key 'mpd-menu "t" 'mpd-toggle)
+  (add-menu-key 'mpd-menu "y" 'mpd-play)
+  (add-menu-key 'mpd-menu "k" 'mpd-stop)
+  (add-menu-key 'mpd-menu "x" 'mpd-seek-+5%)
+  (add-menu-key 'mpd-menu "w" 'mpd-seek--5%)
+  (add-menu-key 'mpd-menu "l" 'show-mpd-playlist)
+  (add-menu-key 'mpd-menu "s" 'start-sonata))
 
 
 (defun mpd-binding ()
