@@ -704,21 +704,21 @@ Window types are in +WINDOW-TYPES+.")
 (defun wait-no-key-or-button-press ()
   (with-grab-keyboard-and-pointer (66 67 66 67)
     (loop
-     (let ((key (loop for k across (xlib:query-keymap *display*)
-		      for code from 0
-		      when (and (plusp k) (not (modifier-p code))) return t))
-	   (button (loop for b in (xlib:make-state-keys (nth-value 4 (xlib:query-pointer *root*)))
-			 when (member b '(:button-1 :button-2 :button-3 :button-4 :button-5))
-			 return t)))
-       (when (and (not key) (not button))
-	 (loop while (xlib:event-case (*display* :discard-p t :peek-p nil :timeout 0)
-		       (:motion-notify () t)
-		       (:key-press () t)
-		       (:key-release () t)
-		       (:button-press () t)
-		       (:button-release () t)
-		       (t nil)))
-	 (return))))))
+       (let ((key (loop for k across (xlib:query-keymap *display*)
+		     for code from 0
+		     when (and (plusp k) (not (modifier-p code))) return t))
+	     (button (loop for b in (xlib:make-state-keys (nth-value 4 (xlib:query-pointer *root*)))
+			when (member b '(:button-1 :button-2 :button-3 :button-4 :button-5))
+			return t)))
+	 (when (and (not key) (not button))
+	   (loop while (xlib:event-case (*display* :discard-p t :peek-p nil :timeout 0)
+			 (:motion-notify () t)
+			 (:key-press () t)
+			 (:key-release () t)
+			 (:button-press () t)
+			 (:button-release () t)
+			 (t nil)))
+	   (return))))))
 
 
 (defun wait-a-key-or-button-press ()
